📝 New Changes jobCategories and other parts
